{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 30,
  "lineage": "bb649d8a-7567-8111-102f-1b93e538ead5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:internet-gateway/igw-0dd7904f12124cd31",
            "id": "igw-0dd7904f12124cd31",
            "owner_id": "600627363311",
            "tags": {
              "Name": "terraform-aws-testing-IGW"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-IGW"
            },
            "vpc_id": "vpc-0cdf20749af4ac01c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:route-table/rtb-0db3e780f54822b8b",
            "id": "rtb-0db3e780f54822b8b",
            "owner_id": "600627363311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd7904f12124cd31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-aws-testing-Main-Public-Route-Table"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-Main-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdf20749af4ac01c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-publicsubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023e162208c4b287d",
            "route_table_id": "rtb-0db3e780f54822b8b",
            "subnet_id": "subnet-0ff9fe45cdcd0d40b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-publicsubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3fad13b4434f540",
            "route_table_id": "rtb-0db3e780f54822b8b",
            "subnet_id": "subnet-089e094e4f2830816"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet2-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-publicsubnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02419e5bb46f11537",
            "route_table_id": "rtb-0db3e780f54822b8b",
            "subnet_id": "subnet-02b047d92b2fe02ca"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet3-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:security-group/sg-0864a56e2d8d4cb20",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0864a56e2d8d4cb20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-aws-testing-Allow-All",
            "name_prefix": "",
            "owner_id": "600627363311",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cdf20749af4ac01c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-0ff9fe45cdcd0d40b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff9fe45cdcd0d40b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-public-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-public-subnet-1"
            },
            "vpc_id": "vpc-0cdf20749af4ac01c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-089e094e4f2830816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089e094e4f2830816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-public-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-public-subnet-2"
            },
            "vpc_id": "vpc-0cdf20749af4ac01c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-02b047d92b2fe02ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b047d92b2fe02ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-public-subnet-3"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-public-subnet-3"
            },
            "vpc_id": "vpc-0cdf20749af4ac01c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:vpc/vpc-0cdf20749af4ac01c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b5910d0ed4ce782d",
            "default_route_table_id": "rtb-004ed01e58efeb5b4",
            "default_security_group_id": "sg-01b0f1aa9c51a1414",
            "dhcp_options_id": "dopt-064a3041eda9d751f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdf20749af4ac01c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004ed01e58efeb5b4",
            "owner_id": "600627363311",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "DevOpsTeam",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "terraform-aws-testing",
              "Owner": "DevOpsTeam",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}